Pritunl Changelog
=================

Version 1.29.1624.82 2018-02-22
-------------------------------

Improve logging

Version 1.29.1618.85 2018-02-16
-------------------------------

Improve IPv6 support

Version 1.29.1614.10 2018-02-12
-------------------------------

Add proxy NDP support

Version 1.29.1613.84 2018-02-11
-------------------------------

Improve IPv6 support

Version 1.29.1609.88 2018-02-07
-------------------------------

Improve host settings
Add dedicated support

Version 1.29.1596.36 2018-01-25
-------------------------------

Add direct IPsec links
Support attaching host to running servers

Version 1.28.1583.74 2018-01-12
-------------------------------

Improve server reliability

Version 1.28.1583.22 2018-01-12
-------------------------------

Fix issue with settings

Version 1.28.1583.4 2018-01-12
------------------------------

Improve Okta single sign-on
Improve OneLogin single sign-on
Improve authentication logging
Fix database performance issue

Version 1.28.1578.26 2018-01-07
-------------------------------

Fix issue with initial setup

Version 1.28.1575.85 2018-01-04
-------------------------------

Improve server reliability

Version 1.28.1548.86 2017-12-08
-------------------------------

Web interface improvements

Version 1.28.1545.95 2017-12-05
-------------------------------

Web server improvements

Version 1.28.1543.43 2017-12-03
-------------------------------

Fix issue with cpu usage

Version 1.28.1541.26 2017-12-01
-------------------------------

Improve Duo phone authentication

Version 1.28.1531.19 2017-11-21
-------------------------------

Support load balancer with Lets Encrypt certificate

Version 1.28.1526.18 2017-11-16
-------------------------------

Update Lets Encrypt support
Web interface improvements

Version 1.28.1515.73 2017-11-05
-------------------------------

Add metric to route options
Improve server routes management

Version 1.28.1487.93 2017-10-08
-------------------------------
