@@ -1,6 +1,10 @@
 Pritunl Changelog
 =================
 
+<%= version %>
+
+Fix issue with server setup
+
 Version 1.29.1624.82 2018-02-22
 -------------------------------
 
